# gsv8-python-package

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: calibration_example.py  data_logging.py  find_adapter.py  simple_read.py
gsv8_ethercat/: __init__.py  calibration.py  cli.py  diagnostics.py  monitor.py  sensor.py
gsv8_ros2/: README.md  package.xml  setup.cfg  setup.py
gsv8_ros2/config/: gsv8_params.yaml
gsv8_ros2/gsv8_ros2/: __init__.py  gsv8_publisher_node.py
gsv8_ros2/launch/: gsv8_launch.py
tests/: __init__.py  conftest.py  test_calibration.py  test_diagnostics.py  test_imports.py  test_monitor.py  test_sensor.py
